# gov-support-bot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/gov_support_bot/: graph.py  main.py  nodes.py  prompts.py  scraper.py  utils.py
src/gov_support_bot/faiss_index/: index.faiss  index.pkl
