[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]


[project]
name = "gov-support-bot"
version = "0.1.0"
description = "A conversational bot that recommends personalized government support schemes"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Joanna Khek Cuina", email = "joannakhek@gmail.com"}
]
dependencies = [
    "faiss-cpu>=1.9.0.post1",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.11",
    "langchain-milvus>=0.1.7",
    "langchain-openai>=0.2.12",
    "langgraph",
    "langgraph-checkpoint-sqlite>=2.0.1",
    "openai>=1.57.4",
    "pandas>=2.2.3",
    "pymilvus[model]>=2.5.0",
    "python-dotenv>=1.0.1",
    "selenium>=4.27.1",
    "streamlit>=1.41.1",
]

[tool.setuptools.dynamic.version]
attr = "gov_support_bot.__version__"

[tool.setuptools.packages.find]
namespaces = false
where = ["src"]
